[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comtypes>=1.4.11",
    "cryptography>=45.0.5",
    "docx2pdf>=0.1.8",
    "exifread>=3.3.1",
    "faker>=37.4.0",
    "fastapi>=0.115.14",
    "flask-cors>=6.0.1",
    "google>=3.0.0",
    "httpx>=0.28.1",
    "insightface>=0.7.3",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "onnx==1.16.1",
    "openpyxl>=3.1.5",
    "pandas-stubs==2.3.0.250703",
    "paramiko>=3.5.1",
    "pdf2docx>=0.5.8",
    "pdfkit>=1.0.0",
    "plum-dispatch==1.7.4",
    "pymupdf>=1.26.3",
    "pymysql>=1.1.1",
    "pypdf2>=3.0.1",
    "pyspeedtest>=1.2.7",
    "python-magic>=0.4.27",
    "pywin32>=310",
    "reportlab>=4.4.2",
    "requires>=0.11.0",
    "scikit-learn>=1.7.0",
    "scp>=0.15.0",
    "seaborn>=0.13.2",
    "selenium>=4.34.0",
    "speedtest>=0.0.1",
    "speedtest-cli>=2.1.3",
    "spire-xls-for-python>=13.5.0",
    "sqlalchemy>=2.0.41",
    "thefuzz>=0.22.1",
    "tortoise-orm[asyncmy]>=0.25.1",
    "ultralytics>=8.3.161",
    "uvicorn[standard]>=0.35.0",
    "you-get>=0.4.1743",
]
